Version 1.5.0-dev
  * Add utils/registry service
  * Initial support for WPS 2.0.0 including the Dismiss extension
  * Fix concurrency access to status informations
  * Use simple file rather than shared memory for storing status informations
  * Add support for db backend to store status informations
  * Add the lib_zoo_service shared library to be linked against C services
  * Add ZOO-API for the PHP language (with documentation)
  * Add doxygen comments in source code
  * Add support for multiple Exception nodes
  * Add a length key when creating MapArray
  * Add OTB support for applications as a service
  * Add the otb2zcfg utility to produce zcfg for otb applications
  * Add OTB Application Observer to have progress status updates
  * Fix maxOccurs handling
  * Fix gesture of downloaded inputs when multiple values are given
  * Add detection of generated_file key in outputs to read the file
  generated by a service
  * Add a minimal parsing API 
  * Run validateRequest (download, default settings and decoding)
  after fork if any
  * Add SAGA-GIS support for modules as a service
  * Add saga2zcfg utility to generate zcfg for SAGA-GIS modules
  * Add SAGA-GIS Observer to have ongoing status updates

Version 1.4.0
  * Small fix for mimeType of results for CGAL services

Version 1.4.0-rc1
  * Binary support for PHP language
  * ZOO-API for the Java language
  * ZOO-Client Javascript API
  * FastCGI fixes
  * JavaScript ZOO-API enhancements (COOKIE use and Output in
  generated XML)
  * Add debian files
  * Inputs passed by reference downloaded in parallel
  * Conform behavior for DescribeProcess when the Identifier was not
  found
  * Add support of maximumMegabytes keywords for ComplexData Inputs
  * Add the optional YAML ZCFG support #4 and the zcfg2yaml converter
  * Return error messages that enable the service provider to quickly
  identify the root cause of errors due to configuration file syntax
  (ticket #90)
  * Fix logic in addMapToMap (ticket #91)